# src/Modules/EntryLogs/DTOs/CreateEntryLogDTO.php
@@ -8,7 +8,8 @@ final class CreateEntryLogDTO
         public readonly string $sku,
         public readonly int $quantity,
         public readonly ?string $name,
-        public readonly ?string $note
+        public readonly ?string $note,
+        public readonly ?string $compartmentId
     ) {
     }
 }
